# prd-utils

./: .gitignore  CMakeLists.txt  README.en.md  README.md
cmake/: board_light.cmake  custom_macros.cmake  show_cmake_param.cmake
include/: prd_utils_internal.h  prd_utils_kv.h
platform/light/: CMakeLists.txt  prd_utils_kv_light.c  uboot_env_params.c  uboot_env_params.h
test/: CMakeLists.txt  test_prd_utils_kv.c
utils/: CMakeLists.txt  prd_utils_kv.c
